// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-tag variant danger outiline false 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--danger">
      <slot></slot>
    </span>
  </mock:shadow-root>
  danger
</mg-tag>
`;

exports[`mg-tag variant danger outiline true 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--danger mg-tag--outline">
      <slot></slot>
    </span>
  </mock:shadow-root>
  danger
</mg-tag>
`;

exports[`mg-tag variant info outiline false 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--info">
      <slot></slot>
    </span>
  </mock:shadow-root>
  info
</mg-tag>
`;

exports[`mg-tag variant info outiline true 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--info mg-tag--outline">
      <slot></slot>
    </span>
  </mock:shadow-root>
  info
</mg-tag>
`;

exports[`mg-tag variant primary outiline false 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--primary">
      <slot></slot>
    </span>
  </mock:shadow-root>
  primary
</mg-tag>
`;

exports[`mg-tag variant primary outiline true 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--outline mg-tag--primary">
      <slot></slot>
    </span>
  </mock:shadow-root>
  primary
</mg-tag>
`;

exports[`mg-tag variant secondary outiline false 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--secondary">
      <slot></slot>
    </span>
  </mock:shadow-root>
  secondary
</mg-tag>
`;

exports[`mg-tag variant secondary outiline true 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--outline mg-tag--secondary">
      <slot></slot>
    </span>
  </mock:shadow-root>
  secondary
</mg-tag>
`;

exports[`mg-tag variant success outiline false 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--success">
      <slot></slot>
    </span>
  </mock:shadow-root>
  success
</mg-tag>
`;

exports[`mg-tag variant success outiline true 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--outline mg-tag--success">
      <slot></slot>
    </span>
  </mock:shadow-root>
  success
</mg-tag>
`;

exports[`mg-tag variant warning outiline false 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--warning">
      <slot></slot>
    </span>
  </mock:shadow-root>
  warning
</mg-tag>
`;

exports[`mg-tag variant warning outiline true 1`] = `
<mg-tag>
  <mock:shadow-root>
    <span class="mg-tag mg-tag--outline mg-tag--warning">
      <slot></slot>
    </span>
  </mock:shadow-root>
  warning
</mg-tag>
`;
